Create ProjectFolder Layout

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,21 @@
     <title>ODIN | To-Do List</title>
 </head>
 <body>
-    <h1>Building To Do List in Console</h1>
+    <div class="wrapper">
+        <header>
+            <ul>
+                <li><button>To Do List</button></li>
+                <li></li>
+            </ul>
+        </header>
+        <section class="content">
+            <div class="projects">
+                <div class="project">
+                    <h4>list 1</h4>
+                    <p>some description 1</p>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
