Add New Project from UI

--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
 <body>
     <div class="wrapper">
         <header>
-            <p><button>To Do List</button></p>
+            <p><button class="logo">To Do List</button></p>
             <ul>
-                <li><button>Create</button></li>
+                <li><button class="create-project">Create</button></li>
                 <li><button>&lt;--</button></li>
             </ul>
         </header>
