Fix bug on adding mutiple create form on create click
The issue is fixed by disabling the buttons

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
             <p><button class="logo">To Do List</button></p>
             <ul>
                 <li><button class="create-project">Create</button></li>
-                <li><button>&lt;--</button></li>
+                <li><button class="back-button">&lt;--</button></li>
             </ul>
         </header>
         <section class="content">
