Save current changes

--- a/src/index.html
+++ b/src/index.html
@@ -10,10 +10,11 @@
         <header>
             <p><button class="logo">To Do List</button></p>
             <ul>
-                <li><button class="create-project">Create</button></li>
+                <li><button class="create-button">Create</button></li>
                 <li><button class="back-button">&lt;--</button></li>
             </ul>
         </header>
+        <h2 class="content-name"></h2>
         <section class="content">
             <div class="cards">
                 <!-- <div class="card todo-list">
